--- a/detailProduct.html
+++ b/detailProduct.html
@@ -119,7 +119,7 @@
         <div class="container">
             <div class="productIntro__navBar">
                 <ul>
-                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="#">Màn hình PC</a></li>
                     <li><a href="#">LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz</a></li>
                 </ul>
@@ -203,43 +203,185 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="productIntro__des"></div>
+                            <div class="productIntro__des">
+                                <img src="./img/zoom-in.png" alt="">
+                                <span>Bấm vào để xem ảnh phóng to</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-7">
                         <div class="productIntro__detail">
                             <div class="productIntro__top">
                                 <h1>LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz 0.03ms</h1>
-                                <div class="productIntro__brand">
-                                    <span>Thương hiệu: </span>
-                                    <a href="#">LG</a>
-                                </div>
-                                <div class="productIntro__id">
-                                    <span>Mã Sản phẩm: </span>
-                                    <span>27GR95QE-B.ATV</span>
+                                <div class="productIntro__below">
+                                    <div class="productIntro__brand">
+                                        <span>Thương hiệu: </span>
+                                        <a href="#">LG</a>
+                                    </div>
+                                    <div class="productIntro__id">
+                                        <span>Mã Sản phẩm: </span>
+                                        <span class="productIntro__code">27GR95QE-B.ATV</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-7"></div>
-                                <div class="col-5"></div>
+                                <div class="col-7">
+                                    <div class="productIntro__price">
+                                        <div class="price-new">22.041.000 <span class="vnd">đ</span></div>
+                                        <div class="price-old">24.490.000 <span class="vnd">đ</span></div>
+                                        <div class="price-des">(Đã bao gồm VAT)</div>
+                                    </div>
+                                    <div class="productIntro__guarantee">
+                                        <span>Bảo hành: 12 tháng. </span><a href="#">(Quy định bảo hành)</a>
+                                    </div>
+                                    <div class="productIntro__option"></div>
+                                    <div class="productIntro__btn">
+                                        <a class="btn--addCart" href="#">Thêm vào giỏ hàng</a>
+                                        <a class="btn--installment1" href="#">Trả góp tiền mặt <div class="btn-des">Chỉ
+                                                từ
+                                                3.441.000 ₫/tháng</div></a>
+                                        <a class="btn--installment2" href="#">Trả góp 0% qua thẻ <div class="btn-des">
+                                                Visa,
+                                                Master, JCB</div></a>
+                                    </div>
+                                </div>
+                                <div class="col-5">
+                                    <div class="productIntro__support">
+                                        <h6 class="support-title">Tư vấn & Mua hàng - Gọi <a href="tel:19007777">1900
+                                                7777</a></h6>
+                                        <ul>
+                                            <li>Freeship với đơn hàng trên 1.000.000đ</li>
+                                            <li>Giao hàng ngay (Nội thành TP.HCM)</li>
+                                            <li>Giao trong vòng 2 đến 3 ngày làm việc (Toàn quốc)</li>
+                                        </ul>
+                                        <p class="support-free">MIỄN PHÍ CHARGE THẺ</p>
+                                        <div class="support-img">
+                                            <img src="./img/payment/ft-img6.png" alt="">
+                                            <img src="./img/payment/ft-img7.png" alt="">
+                                            <img src="./img/payment/ft-img8.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="productIntro__space">
+                <div class="productIntro__other">
+                    <h5 class="other-title">Sản phẩm tương tự</h5>
+                    <div class="other-slider">
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="">
+                                <div class="card">
+                                    <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Dahua DHI-LM24-E231 - 23.8in FHD IPS</h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">7.900.000 <span class="vnd">đ</span></p>
+                                            <span class="card-sale">Sale 10%</span>
+                                        </div>
+                                        <p class="card-old">9.900.000 <span class="vnd">đ</span></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="./detailProduct.html">
+                                <div class="card">
+                                    <img src="./img/products/pc-4/pc-1.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz
+                                        </h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">22.041.000 <span class="vnd">đ</span></p>
+                                            <span class="card-sale">Sale 10%</span>
+                                        </div>
+                                        <p class="card-old">24.490.000 <span class="vnd">đ</span></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="">
+                                <div class="card">
+                                    <img src="./img/products/pc-6.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Dahua DHI-LM27-E230C - 27in FHD VA Cong</h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">3.650.000 <span class="vnd">đ</span></p>
+                                            <!-- <span class="card-sale">Sale 10%</span> -->
+                                        </div>
+                                        <!-- <p class="card-old">9.900.000 <span class="vnd">đ</span></p> -->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="">
+                                <div class="card">
+                                    <img src="./img/products/laptop-1.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">ASUS Vivobook 14 X1404</h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">16.990.000 <span class="vnd">đ</span></p>
+                                            <!-- <span class="card-sale">Sale 10%</span> -->
+                                        </div>
+                                        <!-- <p class="card-old">9.900.000 <span class="vnd">đ</span></p> -->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="">
+                                <div class="card">
+                                    <img src="./img/products/watch-1.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Garmin Venu 3S</h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">11.675.000 <span class="vnd">đ</span></p>
+                                            <span class="card-sale">Sale 5%</span>
+                                        </div>
+                                        <p class="card-old">12.290.000 <span class="vnd">đ</span></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="">
+                                <div class="card">
+                                    <img src="./img/products/laptop-3.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">HP Pavilion 15</h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">11.290.000 <span class="vnd">đ</span></p>
+                                            <!-- <span class="card-sale">Sale 10%</span> -->
+                                        </div>
+                                        <!-- <p class="card-old">9.900.000 <span class="vnd">đ</span></p> -->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slider-item">
+                            <a class="other-card text-decoration-none" href="">
+                                <div class="card">
+                                    <img src="./img/products/read-1.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Máy đọc sách Kindle Paperwhite 4 chống nước</h5>
+                                        <div class="card-discount d-flex align-items-end">
+                                            <p class="card-new">3.090.000 <span class="vnd">đ</span></p>
+                                            <span class="card-sale">Sale 6%</span>
+                                        </div>
+                                        <p class="card-old">3.290.000 <span class="vnd">đ</span></p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- PRODUCT TECHNIQUE -->
-    <section class="productTechnique">
-        <div class="container">
-            <div class="row">
-                <div class="col-8"></div>
-                <div class="col-4"></div>
-            </div>
-        </div>
-    </section>
-    <!-- PRODUCT OTHER -->
-    <section class="productOther"></section>
     <!-- FOOTER -->
     <footer>
         <div class="container">
