--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
                 <div class="tab-content" id="gadgetsTabContent">
                     <div class="tab-pane fade show active" id="new-tab-pane" role="tabpanel" aria-labelledby="new-tab"
                         tabindex="0">
-                        <div class="bestseller__slider">
-                            <div class="bestseller__item">
+                        <div class="bestseller__new">
+                            <div class="new-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
@@ -265,23 +265,23 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item">
-                                <a class="bestseller__card" href="">
+                            <div class="new-item">
+                                <a class="bestseller__card" href="./detailProduct.html">
                                     <div class="card">
-                                        <img src="./img/products/pc-4.jpg" class="card-img-top" alt="...">
+                                        <img src="./img/products/pc-4/pc-1.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz
                                             </h5>
                                             <div class="card-discount d-flex align-items-end">
-                                                <p class="card-new">24.790.000 <span class="vnd">đ</span></p>
-                                                <!-- <span class="card-sale">Sale 10%</span> -->
+                                                <p class="card-new">22.041.000 <span class="vnd">đ</span></p>
+                                                <span class="card-sale">Sale 10%</span>
                                             </div>
-                                            <!-- <p class="card-old">9.900.000 <span class="vnd">đ</span></p> -->
+                                            <p class="card-old">24.490.000 <span class="vnd">đ</span></p>
                                         </div>
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item">
+                            <div class="new-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/pc-6.jpg" class="card-img-top" alt="...">
@@ -296,7 +296,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item">
+                            <div class="new-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/laptop-1.jpg" class="card-img-top" alt="...">
@@ -311,7 +311,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item">
+                            <div class="new-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/watch-1.jpg" class="card-img-top" alt="...">
@@ -326,7 +326,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item">
+                            <div class="new-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/laptop-3.jpg" class="card-img-top" alt="...">
@@ -341,7 +341,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item">
+                            <div class="new-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/read-1.jpg" class="card-img-top" alt="...">
@@ -360,8 +360,8 @@
                     </div>
                     <div class="tab-pane fade" id="selling-tab-pane" role="tabpanel" aria-labelledby="selling-tab"
                         tabindex="0">
-                        <div class="bestseller__slider2">
-                            <div class="bestseller__item2">
+                        <div class="bestseller__selling">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
@@ -376,10 +376,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item2">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
-                                        <img src="./img/products/pc-4.jpg" class="card-img-top" alt="...">
+                                        <img src="./img/products/pc-4/pc-1.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz
                                             </h5>
@@ -392,7 +392,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item2">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/pc-6.jpg" class="card-img-top" alt="...">
@@ -407,7 +407,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item2">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/laptop-1.jpg" class="card-img-top" alt="...">
@@ -422,7 +422,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item2">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/watch-1.jpg" class="card-img-top" alt="...">
@@ -437,7 +437,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item2">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/laptop-3.jpg" class="card-img-top" alt="...">
@@ -452,7 +452,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item2">
+                            <div class="selling-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/read-1.jpg" class="card-img-top" alt="...">
@@ -471,8 +471,8 @@
                     </div>
                     <div class="tab-pane fade" id="promotion-tab-pane" role="tabpanel" aria-labelledby="promotion-tab"
                         tabindex="0">
-                        <div class="bestseller__slider3">
-                            <div class="bestseller__item3">
+                        <div class="bestseller__promotion">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
@@ -487,10 +487,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item3">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
-                                        <img src="./img/products/pc-4.jpg" class="card-img-top" alt="...">
+                                        <img src="./img/products/pc-4/pc-1.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz
                                             </h5>
@@ -503,7 +503,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item3">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/pc-6.jpg" class="card-img-top" alt="...">
@@ -518,7 +518,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item3">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/laptop-1.jpg" class="card-img-top" alt="...">
@@ -533,7 +533,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item3">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/watch-1.jpg" class="card-img-top" alt="...">
@@ -548,7 +548,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item3">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/laptop-3.jpg" class="card-img-top" alt="...">
@@ -563,7 +563,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="bestseller__item3">
+                            <div class="promotion-item">
                                 <a class="bestseller__card" href="">
                                     <div class="card">
                                         <img src="./img/products/read-1.jpg" class="card-img-top" alt="...">
