--- a/detailProduct.html
+++ b/detailProduct.html
@@ -130,78 +130,10 @@
                         <div class="productIntro__slick">
                             <div class="productIntro__promotion">Sale 10%</div>
                             <div class="productIntro__nav">
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-1.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-2.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-3.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-4.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-5.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-6.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="nav--item">
-                                    <div class="item--img">
-                                        <img src="./img/products/pc-4/de-7.jpg" alt="">
-                                    </div>
-                                </div>
+                               <script src="js/detailProduct/detailNav.js"></script>
                             </div>
                             <div class="productIntro__slide">
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-1.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-1.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-2.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-2.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-3.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-3.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-4.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-4.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-5.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-5.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-6.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-6.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="slide--item">
-                                    <a href="./img/products/pc-4/pc-7.jpg" data-fancybox="gallery">
-                                        <img src="./img/products/pc-4/pc-7.jpg" alt="">
-                                    </a>
-                                </div>
+                                <script src="js/detailProduct/detailZoom.js"></script>
                             </div>
                             <div class="productIntro__des">
                                 <img src="./img/zoom-in.png" alt="">
